--- a/assignments/week01/day 5/solution.html
+++ b/assignments/week01/day 5/solution.html
@@ -1,3 +1,4 @@
+//part 1
 mk dir dir1      //TO make directory
 ls               //directory listing
 cd dir    //change directory to dir
@@ -17,3 +18,78 @@ directory file2
 ln -s file link  //create symbolic link link to file
 touch file       //create or update file
 cat > file       //places standard input into file 
+
+
+
+
+//part 2
+<h1>Welcome to Programming Language Musueum!!</h1>
+<br>
+<br>
+<p1>Wikipedia links for web technologies<p1>
+  <br>
+  <br>
+  <ul>
+  <li><a href="www.html.com">
+    HTML
+    </a></li>
+  <li><a href="www.css.com">
+    CSS
+    </a></li>
+  <li><a href="www.javascript.com">
+    Javascript
+    </a></li>
+  </ul>
+  <br>
+  <br>
+  <p2>Find info about <b>browsers</b> and their <b>companies</b> below.<p2>
+    <br>
+    <br>
+    <table border="1">
+    <thead>
+      <tr>
+        <th>
+          Browsers
+        </th>
+        <th>
+          Company
+        </th>
+        <th>
+          First release year
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          Firefox
+        </td>
+        <td>
+          Mozilla Foundation
+          </td>
+        <td>
+          2002
+        </td>
+      </tr>
+      <td>
+          Internet Explorer
+      </td>
+      <td>
+        Microsoft Corporation
+      </td>
+      <td>
+        1995
+      </td>
+      </tr>
+    <td>
+      Chrome
+    </td>
+    <td>
+      Google LLC
+    </td>
+    <td>
+      2008
+    </td>
+    </tr>
+    </tbody>
+  </table>
