--- a/demo/css/demo.html
+++ b/demo/css/demo.html
@@ -4,57 +4,7 @@
 <title>CSS Template</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="">
-<style>
-  html,body{
-  height: 100%;
-}
-.container{
-  width: 80%;
-  border:2px solid black;
-  height: 80%;
-  margin:5% 2% 2% 10%;
-}
-.header{
-  width: 100%;
-  border-bottom: 2px solid black;
-  height: 8%;
-  background-color: #efefef;
-}
-.left{
-  width: 30%;
-  border: 1px solid black;
-  height: 52%;
-  float:left;
-  margin: 2%;
-}
-.right{
-  width: 53%;
-  border: 1px solid black;
-  height: 60%;
-  float:left;
-  margin: 2% 3% 0% 6%;
-}
-.footer{
-  width: 80%;
-  border: 1px solid black;
-  height: 10%;
-  margin:38% 2% 0% 13%;
-}
-table, td, th {
-  border: 1px solid black;
-}
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
-th {
-  height: 30px;
-}
-td{
-  height: 93px;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -94,9 +44,56 @@ td{
               </table>
     </div>
     <div class="footer">
-        <p>the rishav play some ad</p>
-
+            
     </div>
   </div>
 </body>
 </html>
+html,body{
+    height: 100%;
+  }
+  .container{
+    width: 80%;
+    border:2px solid black;
+    height: 80%;
+    margin:5% 2% 2% 10%;
+  }
+  .header{
+    width: 100%;
+    border-bottom: 2px solid black;
+    height: 8%;
+    background-color: #efefef;
+  }
+  .left{
+    width: 30%;
+    border: 1px solid black;
+    height: 52%; 
+    float:left;
+    margin: 2%;
+  }
+  .right{
+    width: 53%;
+    border: 1px solid black;
+    height: 60%; 
+    float:left;
+    margin: 2% 3% 0% 6%;
+  }
+  .footer{
+    width: 80%;
+    border: 1px solid black;
+    height: 10%; 
+    margin:38% 2% 0% 13%;
+  }
+  table, td, th {
+    border: 1px solid black;
+  }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  th {
+    height: 30px;
+  }
+  td{
+    height: 55px;
+  }
