--- a/assignments/week01/day 5/solution.html
+++ b/assignments/week01/day 5/solution.html
@@ -1,31 +1,9 @@
-//part 1
-mk dir dir1      //TO make directory
-ls               //directory listing
-cd dir    //change directory to dir
-cd        //change to home
-pwd       //show current directory
-mkdir dir //create a directory dir
-rm file   //delete file
-rm -r dir //delete directory dir
-rm -f file //force remove file
-rm -rf dir //force remove directory dir *
-cp file1 file2   //copy file1 to file2
-cp -r dir1 dir2  //copy dir1 to dir2; create dir2 if it
-doesn't exist
-mv file1 file2    //rename or move file1 to file2
-if file2 is an existing directory, moves file1 into
-directory file2
-ln -s file link  //create symbolic link link to file
-touch file       //create or update file
-cat > file       //places standard input into file 
-
-
-
-
-//part 2
+<!DOCTYPE html>
+<html>
 <h1>Welcome to Programming Language Musueum!!</h1>
 <br>
 <br>
+<body>
 <p1>Wikipedia links for web technologies<p1>
   <br>
   <br>
@@ -93,3 +71,5 @@ cat > file       //places standard input into file
     </tr>
     </tbody>
   </table>
+</body>
+  </html>
