--- a/assignments/week02/day5/WebMail.html
+++ b/assignments/week02/day5/WebMail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>My Mail</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="">
@@ -39,7 +39,7 @@
   width: 80%;
   border: 1px solid black;
   height: 10%;
-  margin:38% 2% 0% 13%;
+  margin:38% 2% 3% 13%;
 }
 table, td, th {
   border: 1px solid black;
@@ -94,7 +94,8 @@ td{
               </table>
     </div>
     <div class="footer">
-        <p>the rishav play some ad</p>
+        <p> The Rishav play some ad </p>
+    </div>
 
     </div>
   </div>
