small change by mentor

--- a/assignments/week02/day5/WebMail.html
+++ b/assignments/week02/day5/WebMail.html
@@ -2,9 +2,6 @@
 <html lang="en">
 <head>
 <title>My Mail</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="">
 <style>
   html,body{
   height: 100%;
@@ -71,11 +68,14 @@ td{
     </div>
     <div class="right">
       <table>
+                <thead>
                 <tr>
                   <th>From</th>
                   <th>Subject</th>
                   <th>Date</th>
                 </tr>
+                </thead>
+                <tbody>
                 <tr>
                   <td>Bill Gates</td>
                   <td>Wellcome to Microsoft</td>
@@ -91,6 +91,7 @@ td{
                   <td>bmw</td>
                   <td>1min ago</td>
                 </tr>
+                </tbody>  
               </table>
     </div>
     <div class="footer">
