assignment week 3 day 3 and updated all

--- a/assignments/week03/day1/Home.html
+++ b/assignments/week03/day1/Home.html
@@ -30,19 +30,23 @@
         <div class="container-fluid">
                 <div class="row">
                   <div class="col-sm">
-                    <h3><strong><ins>Feature# 1</ins></strong></h3>
+                    <h3><strong>Feature# 1</strong></h3>
+                    <hr>
                     <p>Some text</p>
                   </div>
                   <div class="col-sm">
-                    <h3><strong><ins>Feature# 2</ins></strong></h3>
+                    <h3><strong>Feature# 2</strong></h3>
+                    <hr>
                     <p>Some text</p>
                   </div>
                   <div class="col-sm">
-                    <h3><strong><ins>Feature# 3</ins></strong></h3>
+                    <h3><strong>Feature# 3</strong></h3>
+                    <hr>
                     <p>Some text</p>
                   </div>
                   <div class="col-sm">
-                    <h3><strong><ins>Feature# 4</ins></strong></h3>
+                    <h3><strong>Feature# 4</strong></h3>
+                    <hr>
                     <p>Some text</p>
                   </div>
                 </div>
