--- a/assignments/week02/day5/WebMail.html
+++ b/assignments/week02/day5/WebMail.html
@@ -3,102 +3,104 @@
 <head>
 <title>My Mail</title>
 <style>
-  html,body{
-  height: 100%;
+.header {
+  margin-bottom: 50px;
+  font-family: sans-serif;
+  padding-left: 10px;
+  font-size:25px
 }
-.container{
-  width: 80%;
-  border:2px solid black;
-  height: 80%;
-  margin:5% 2% 2% 10%;
+ul {
+  list-style: none;
+  float: left;
+  line-height: 2.5;
+  font-size: 18px;
+  font-family: monospace;
 }
-.header{
-  width: 100%;
-  border-bottom: 2px solid black;
-  height: 8%;
-  background-color: #efefef;
+.email, .navbar {
+  display: inline-block
 }
-.left{
-  width: 30%;
-  border: 1px solid black;
-  height: 52%;
-  float:left;
-  margin: 2%;
+.email {
+  float: right;
+  width: 60%;
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='600' height='100' viewBox='0 0 600 100'%3E%3Cg stroke='%23FFF' stroke-width='0' stroke-miterlimit='10' %3E%3Ccircle fill='%23037B79' cx='0' cy='0' r='50'/%3E%3Ccircle fill='%2392DEBA' cx='100' cy='0' r='50'/%3E%3Ccircle fill='%23FFFFD8' cx='200' cy='0' r='50'/%3E%3Ccircle fill='%23CAF2FF' cx='300' cy='0' r='50'/%3E%3Ccircle fill='%236FCCFF' cx='400' cy='0' r='50'/%3E%3Ccircle fill='%23006EB4' cx='500' cy='0' r='50'/%3E%3Ccircle fill='%23037B79' cx='600' cy='0' r='50'/%3E%3Ccircle cx='-50' cy='50' r='50'/%3E%3Ccircle fill='%2353ac9a' cx='50' cy='50' r='50'/%3E%3Ccircle fill='%23ceefc1' cx='150' cy='50' r='50'/%3E%3Ccircle fill='%23ffffff' cx='250' cy='50' r='50'/%3E%3Ccircle fill='%239de0fe' cx='350' cy='50' r='50'/%3E%3Ccircle fill='%233e9cda' cx='450' cy='50' r='50'/%3E%3Ccircle fill='%2300789c' cx='550' cy='50' r='50'/%3E%3Ccircle cx='650' cy='50' r='50'/%3E%3Ccircle fill='%23037B79' cx='0' cy='100' r='50'/%3E%3Ccircle fill='%2392DEBA' cx='100' cy='100' r='50'/%3E%3Ccircle fill='%23FFFFD8' cx='200' cy='100' r='50'/%3E%3Ccircle fill='%23CAF2FF' cx='300' cy='100' r='50'/%3E%3Ccircle fill='%236FCCFF' cx='400' cy='100' r='50'/%3E%3Ccircle fill='%23006EB4' cx='500' cy='100' r='50'/%3E%3Ccircle fill='%23037B79' cx='600' cy='100' r='50'/%3E%3Ccircle cx='50' cy='150' r='50'/%3E%3Ccircle cx='150' cy='150' r='50'/%3E%3Ccircle cx='250' cy='150' r='50'/%3E%3Ccircle cx='350' cy='150' r='50'/%3E%3Ccircle cx='450' cy='150' r='50'/%3E%3Ccircle cx='550' cy='150' r='50'/%3E%3C/g%3E%3C/svg%3E");
+  margin-right: 30px;
 }
-.right{
-  width: 53%;
-  border: 1px solid black;
-  height: 60%;
-  float:left;
-  margin: 2% 3% 0% 6%;
+.navbar {
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='600' height='100' viewBox='0 0 600 100'%3E%3Cg stroke='%23FFF' stroke-width='0' stroke-miterlimit='10' %3E%3Ccircle fill='%23037B79' cx='0' cy='0' r='50'/%3E%3Ccircle fill='%2392DEBA' cx='100' cy='0' r='50'/%3E%3Ccircle fill='%23FFFFD8' cx='200' cy='0' r='50'/%3E%3Ccircle fill='%23CAF2FF' cx='300' cy='0' r='50'/%3E%3Ccircle fill='%236FCCFF' cx='400' cy='0' r='50'/%3E%3Ccircle fill='%23006EB4' cx='500' cy='0' r='50'/%3E%3Ccircle fill='%23037B79' cx='600' cy='0' r='50'/%3E%3Ccircle cx='-50' cy='50' r='50'/%3E%3Ccircle fill='%2353ac9a' cx='50' cy='50' r='50'/%3E%3Ccircle fill='%23ceefc1' cx='150' cy='50' r='50'/%3E%3Ccircle fill='%23ffffff' cx='250' cy='50' r='50'/%3E%3Ccircle fill='%239de0fe' cx='350' cy='50' r='50'/%3E%3Ccircle fill='%233e9cda' cx='450' cy='50' r='50'/%3E%3Ccircle fill='%2300789c' cx='550' cy='50' r='50'/%3E%3Ccircle cx='650' cy='50' r='50'/%3E%3Ccircle fill='%23037B79' cx='0' cy='100' r='50'/%3E%3Ccircle fill='%2392DEBA' cx='100' cy='100' r='50'/%3E%3Ccircle fill='%23FFFFD8' cx='200' cy='100' r='50'/%3E%3Ccircle fill='%23CAF2FF' cx='300' cy='100' r='50'/%3E%3Ccircle fill='%236FCCFF' cx='400' cy='100' r='50'/%3E%3Ccircle fill='%23006EB4' cx='500' cy='100' r='50'/%3E%3Ccircle fill='%23037B79' cx='600' cy='100' r='50'/%3E%3Ccircle cx='50' cy='150' r='50'/%3E%3Ccircle cx='150' cy='150' r='50'/%3E%3Ccircle cx='250' cy='150' r='50'/%3E%3Ccircle cx='350' cy='150' r='50'/%3E%3Ccircle cx='450' cy='150' r='50'/%3E%3Ccircle cx='550' cy='150' r='50'/%3E%3C/g%3E%3C/svg%3E");
+  border: 2px solid black;
+  width: 10%;
+  height: 200px;
 }
-.footer{
-  width: 80%;
-  border: 1px solid black;
-  height: 10%;
-  margin:38% 2% 3% 13%;
+li:hover{
+  color: antiquewhite;
 }
-table, td, th {
-  border: 1px solid black;
+tr {
+  outline: 2px solid black;
+}
+td {
+  padding: 10px;
 }
 table {
-  border-collapse: collapse;
   width: 100%;
+  height: 100%
+  }
+th , td {
+  border-right: 1px solid black;
 }
-th {
-  height: 30px;
+.footer {
+  position: absolute;
+  bottom: 10px;
+  right: 5px;
+  width: 70%;
 }
-td{
-  height: 93px;
+body {
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg stroke='%23CCC' stroke-width='0' %3E%3Crect fill='%23F5F5F5' x='-60' y='-60' width='110' height='240'/%3E%3C/g%3E%3C/svg%3E");
 }
 </style>
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-        <h2>My Mail</h2>
-    </div>
-    <div class="left">
-      <ul class="b">
-                <li><p><b><a href="default.asp" target="_blank">Inbox</a></b></p></li>
-                <li><p><b><a href="default.asp" target="_blank">Sent</a></b></p></li>
-                <li><p><b><a href="default.asp" target="_blank">Drafts</a></b></p></li>
-                <li><p><b><a href="default.asp" target="_blank">Trashs</a></b></p></li>
-              </ul>
-    </div>
-    <div class="right">
-      <table>
-                <thead>
-                <tr>
-                  <th>From</th>
-                  <th>Subject</th>
-                  <th>Date</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                  <td>Bill Gates</td>
-                  <td>Wellcome to Microsoft</td>
-                  <td>12 hours ago</td>
-                </tr>
-                <tr>
-                  <td>Steve Jobs</td>
-                  <td>wellcome to Apple</td>
-                  <td>12/12/2010</td>
-                </tr>
-                <tr>
-                  <td>rishav</td>
-                  <td>bmw</td>
-                  <td>1min ago</td>
-                </tr>
-                </tbody>  
-              </table>
-    </div>
-    <div class="footer">
-        <p> The Rishav play some ad </p>
+  <div class="header">
+    <span>My Mail</span>
+  </div>
+
+    <div class="navbar">
+      <ul>
+        <li>Inbox</li>
+        <li>Sent</li>
+        <li>Drafts</li>
+        <li>Trashs</li>
+      </ul>
     </div>
 
+    <div class="email">
+      <table>
+          <tr>
+              <th>From</th>
+              <th>Subject</th>
+              <th>Date</th>
+            </tr>
+            <tr>
+                <td>Bill Gates</td>
+                <td>Wellcome to Microsoft</td>
+                <td>12 hours ago</td>
+            </tr>
+            <tr>
+                <td>Steve Jobs</td>
+                <td>wellcome to Apple</td>
+                <td>12/12/2010</td>
+            </tr>
+            <tr>
+                <td>rishav</td>
+                <td>bmw</td>
+                <td>1min ago</td>
+            </tr>
+       </table>
+       </div>
+       <div class="footer">
+     <img src="https://support.litmos.com/hc/article_attachments/360009513054/CleanShot_2018-07-26_at_11.04.53.jpg" style="width: 950px">
     </div>
-  </div>
 </body>
 </html>
