--- a/assignments/week03/day1/About Us.html
+++ b/assignments/week03/day1/About Us.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>About Us</title>
-<!--CSS stylesheet tag-->
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sh
-a384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-<link rel="stylesheet" type="text/css" href="stylesheet.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,400,700,800&display=swap">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpb
-zo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHq
-dSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pX
-B1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>About Us</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="header">
-            <nav class="nav bg-dark">
-                <a class="nav-link Home" href="C:\Users\Admin\Documents\GitHub\rishav-sharma-au4\assignments\week03\day1\Home.html">Home</a>
-                <a class="nav-link About Us" href="C:\Users\Admin\Documents\GitHub\rishav-sharma-au4\assignments\week03\day1\About Us.html">About</a>
-                <a class="nav-link Contact Us" href="C:\Users\Admin\Documents\GitHub\rishav-sharma-au4\assignments\week03\day1\Contact Us.html">Contact Us</a>
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </nav>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <ul class="navbar-nav mr auto">
+        <li class="nav-item">
+          <a href="Home.html" class="nav-link active">Home</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link active">About Us</a>
+          </li>
+          <li class="nav-item">
+              <a href="Contact Us.html" class="nav-link active">Contact Us</a>
+            </li>
+      </ul>
+    </nav> 
         <br>
         <div class="container">
-            <h1><strong><em><ins>About Us</ins></em></strong></h1>
-            <br>
+            <h1><strong><em>About Us</em></strong></h1>
+            <hr>
             <div class="row mx-md-n5">
                     <div class="col px-md-5"><h3>CEO</h3>
                     <br>
@@ -39,7 +34,7 @@ B1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></s
                   </div>
                   <br>
                   <div class="row mx-md-n5">
-                        <div class="col px-md-5"><h3>CEO</h3>
+                        <div class="col px-md-5"><h3>CTO</h3>
                         <br>
                         <p>Rishav Shekhar Sharma</p>
                         </div>
@@ -47,7 +42,7 @@ B1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></s
                       </div>
                       <br>
                       <div class="row mx-md-n5">
-                            <div class="col px-md-5"><h3>CEO</h3>
+                            <div class="col px-md-5"><h3>COO</h3>
                             <br>
                             <p>Rishav Shekhar Sharma</p>
                             </div>
@@ -57,5 +52,3 @@ B1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></s
     </div>
 </body>
 </html>
-
-        
