--- a/coding-challenges/week03/day5/index.html
+++ b/coding-challenges/week03/day5/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE HTML>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <title>Table</title>
-    <script type="text/javascript" src="table.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
-<body style="background-color: lightcyan" onload="square()">
-<h2 style="text-align: center;color:rbg( 35, 118, 187)">Javascript to generate squares of 1 to 10 numbers</h2>
+<body>
+<script src="table.js"></script>
 </body>
 </html>
