--- a/coding-challenges/week04/day4/index.html
+++ b/coding-challenges/week04/day4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, intial-scale=1.0">
+        <meta name="viewport" content="width=device-width", intial-scale="1.0">
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
         <title>Search City</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,7 +14,7 @@
                     <div class="col-md-6-mx-auto">
                         <form class="form-group">
                             <h2>Find City</h2>
-                            <input type="search-keyword" class="form-control" placeholder="e.g. m">
+                            <input type="search-keyword" class="form-control" placeholder="e.g. a">
                             <button type="button" id="submit-btn" class="btn btn-outline-dark mt-2">Submit</button>
                         </form>
                     </div>
