--- a/coding-challenges/week05/day3/index.html
+++ b/coding-challenges/week05/day3/index.html
@@ -48,6 +48,9 @@
                                <th width="7%">Page</th> 
                                <th width="7%">Year</th> 
                           </tr> 
+                          <tbody>
+                              
+                          </tbody>
                      </table>
                     </div>
         </div>
