--- a/coding-challenges/week05/day3/index.html
+++ b/coding-challenges/week05/day3/index.html
@@ -20,7 +20,7 @@
                     <form class="from-group">
                         <input type="text" class="form-control" id="search-keyword" placeholder="E.g.,English" required>
                     </form>
-                    <button type="button" id="submit-btn" class="btn btn-info">submit</button>
+                    <button type="button" id="submit-btn" class="btn btn-info">Submit</button>
                 </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
                                     <th scope="col">Title</th>  
                                     <th scope="col">Author</th>  
                                     <th scope="col">Country</th>  
-                                    <th scope="col">Language</th>  
+                                    <th scope="col">language</th>  
                                     <th scope="col">Link</th>  
                                     <th scope="col">Page</th> 
                                     <th scope="col">Year</th> 
@@ -49,7 +49,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
-    src="http://code.jquery.com/jquery-3.4.1.min.js"
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
     <script type="text/javascript" src="search.js"></script>
