--- a/monthly-tests/TEST-1/index.html
+++ b/monthly-tests/TEST-1/index.html
@@ -18,17 +18,21 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <table class="table">
-                        <thead class="thead-dark">
+                    <table class="table" id="employee_table">
+                        
                             <tr>
+                                <thead class="thead-dark">
                                     <th scope="col">ID</th>  
                                     <th scope="col">NAME</th>  
                                     <th scope="col">E-MAIL</th>  
                                     <th scope="col">Country</th>  
                                     <th scope="col">SALARY</th>  
                                     <th scope="col">ACTION</th> 
+                                </thead>
                             </tr>
-                        </thead>
+                       <tbody>
+                           
+                       </tbody>
                     </table>
                     <tbody>
 
