--- a/monthly-tests/TEST-1/index.html
+++ b/monthly-tests/TEST-1/index.html
@@ -15,7 +15,7 @@
         <div class="container" style="text-align: center;">
                     <h2>Hash Media - Employee List</h2>
         </div>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <table class="table" id="employee_table">
@@ -31,7 +31,7 @@
                                 </thead>
                             </tr>
                        <tbody>
-                           
+
                        </tbody>
                     </table>
                     <tbody>
