--- a/assignments/week26/day 4/index.html
+++ b/assignments/week26/day 4/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <div class="wrapper" style="color: slategrey;">
-            <div class="child one" style="flex: "><h1>Header<h1></h1></div>
+            <div class="child one" ><h1>Header<h1></h1></div>
             <div class="child two" style="flex: 1"><h1>Nav</h1></div>
             <div class="child three" style="flex: 1"><h1>Article</h1></div>
-            <div class="child four" style="flex: "><h1>Footer</h1></div>          
+            <div class="child four" ><h1>Footer</h1></div>          
         </div>
     </body>
 </html>
